[Frontend] Sticky footer overlaping bug fix

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,28 +1,24 @@
-
-
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 html, body {
     height: 100%;
-    width: 100%;
 }
 
+/* Wrapper for page content to push down footer */
 #wrap {
     min-height: 100%;
+    height: auto;
+    /* Negative indent footer by its height */
+    margin: 0 auto -60px;
+    /* Pad bottom by footer height */
+    padding: 0 0 60px;
 }
 
-#main {
-    overflow: auto;
-    padding-bottom: 150px; /* this needs to be bigger than footer height*/
-}
-
-.panel-footer {
-    position: relative;
-    margin-top: -100px; /* negative value of footer height */
-    height: 50px;
-    clear: both;
-    padding-top: 20px;
+/* Set the fixed height of the footer here */
+.footer {
+    height: 60px;
+    background-color: #f5f5f5;
 }
 
 .ui-menu .ui-menu-item a,
@@ -30,14 +26,14 @@ html, body {
 .ui-menu .ui-menu-item a.ui-state-active {
     font-weight: normal;
     margin: -1px;
-    text-align:left;
-    font-size:14px;
+    text-align: left;
+    font-size: 14px;
 }
 
 /** City autocomplete field */
 
 /*.ui-autocomplete-loading {*/
-    /*background: white url("./ui-anim_basic_16x16.gif") right center no-repeat;*/
+/*background: white url("./ui-anim_basic_16x16.gif") right center no-repeat;*/
 /*}*/
 
 #city {
